tests/snapshots/value_lists/Admin API Tool/Schedule_repeatTask - ID 9.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="9" name="Schedule_repeatTask">
	<Source value="Custom"></Source>
	<CustomValues>
		<Text><![CDATA[OnceWeeklyEvery N Days]]></Text>
	</CustomValues>
	<UUID modifications="3" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">4EB9D867-D026-41E5-A940-FCFBAE1659F9</UUID>
</ValueList>
