tests/snapshots/value_lists/Admin API Tool/Schedule_resource_files - ID 14.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="14" name="Schedule_resource_files">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="True" sort="True">
			<FieldReference id="13" name="filename_ae">
				<TableOccurrenceReference id="1065110" name="SCH_FMS_FIL__files"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<ShowRelated value="True">
			<TableOccurrenceReference id="1065090" name="SCH__schedules"></TableOccurrenceReference>
		</ShowRelated>
	</Field>
	<UUID modifications="5" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">D872D2FB-825E-439C-884D-00B473501F5F</UUID>
</ValueList>
