tests/snapshots/value_lists/Admin API Tool/Schedule_resource_folders - ID 13.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="13" name="Schedule_resource_folders">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="True" sort="True">
			<FieldReference id="4" name="folder">
				<TableOccurrenceReference id="1065110" name="SCH_FMS_FIL__files"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<ShowRelated value="True">
			<TableOccurrenceReference id="1065090" name="SCH__schedules"></TableOccurrenceReference>
		</ShowRelated>
	</Field>
	<UUID modifications="3" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">1C933FD9-3E58-4780-BA6F-5B44C13A55C8</UUID>
</ValueList>
