tests/snapshots/value_lists/Admin API Tool/authenticatedStream - ID 18.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="18" name="authenticatedStream">
	<Source value="Custom"></Source>
	<CustomValues>
		<Text><![CDATA[12]]></Text>
	</CustomValues>
	<UUID modifications="0" userName="Mike Duncan" accountName="Admin" timestamp="2022-02-17T14:42:06">E1FE7F8D-B03C-4D08-B3A9-C23582AB5432</UUID>
</ValueList>
