tests/snapshots/value_lists/Admin API Tool/characterEncoding - ID 2.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="2" name="characterEncoding">
	<Source value="Custom"></Source>
	<CustomValues>
		<Text><![CDATA[UTF-8ISO-8859-1]]></Text>
	</CustomValues>
	<UUID modifications="1" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">1A1C04F5-A9E8-4E19-A18A-0D1EE8870F52</UUID>
</ValueList>
