tests/snapshots/value_lists/Admin API Tool/layouts - ID 12.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="12" name="layouts">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="True" sort="True">
			<FieldReference id="51" name="dapi_layouts">
				<TableOccurrenceReference id="1065089" name="FMS__fmserver"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<ShowRelated value="True">
			<TableOccurrenceReference id="1065107" name="FMS_FMS__fmserver_self"></TableOccurrenceReference>
		</ShowRelated>
	</Field>
	<UUID modifications="2" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">817BFD73-1C80-473A-8C80-062C3CEACE51</UUID>
</ValueList>
