tests/snapshots/value_lists/Admin API Tool/schedules_saved - ID 17.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="17" name="schedules_saved">
	<Source value="FromField"></Source>
	<Field>
		<PrimaryField show="False" sort="False">
			<FieldReference id="8" name="ID">
				<TableOccurrenceReference id="1065112" name="FMS_SCHS__schedules_saved"></TableOccurrenceReference>
			</FieldReference>
		</PrimaryField>
		<SecondaryField show="True" sort="True">
			<FieldReference id="2" name="CreationTimestamp">
				<TableOccurrenceReference id="1065112" name="FMS_SCHS__schedules_saved"></TableOccurrenceReference>
			</FieldReference>
		</SecondaryField>
		<ShowRelated value="True">
			<TableOccurrenceReference id="1065089" name="FMS__fmserver"></TableOccurrenceReference>
		</ShowRelated>
	</Field>
	<UUID modifications="2" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-15T14:31:47">3028152F-BDFF-4C3B-AA1B-7EB27F9276DA</UUID>
</ValueList>
