tests/snapshots/value_lists/Admin API Tool/serverStatus - ID 4.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="4" name="serverStatus">
	<Source value="Custom"></Source>
	<CustomValues>
		<Text><![CDATA[RUNNINGSTOPPED]]></Text>
	</CustomValues>
	<UUID modifications="1" userName="Malte Bastian" accountName="Admin" timestamp="2024-02-18T17:38:30">E3261D3A-675B-4096-B9E9-2D52B0582AB2</UUID>
</ValueList>
