tests/snapshots/value_lists/Admin API Tool/smtpAuthType - ID 15.xml.snap
---
source: src/main.rs
expression: output_content
---
<ValueList id="15" name="smtpAuthType">
	<Source value="Custom"></Source>
	<CustomValues>
		<Text><![CDATA[035]]></Text>
	</CustomValues>
	<UUID modifications="1" userName="Mike Duncan" accountName="Admin" timestamp="2021-01-11T16:32:48">869742C8-C6FE-44AB-BF53-AE634540A2D8</UUID>
</ValueList>
